Bug 8630 - Add covers from AdLibris to the OPAC and Intranet
Covers are only available in one rather big size, so I have used CSS
(max-height and max-width) to reduce size for thumbnails.

To test:
- Activate the AdLibrisCovers syspref
- Make sure you have some ISBNs that are available from AdLibris.com
  (e.g.: 0375726446, 9188876659)
- Check that covers show up in results and detail views, both in the
  OPAC and the staff client
- Check that everything still works when you choose different locales

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -1451,6 +1451,11 @@ li.email {
 	margin : auto;
 }
 
+.adlibristhumbnail {
+  max-height: 140px;
+  max-width: 140px;
+}
+
 #searchresults ul li {
 	font-size : 90%;
 	list-style : url(../../img/item-bullet.gif);
